tdf#119036 - Inserting columns into RTL sheets will add them to the wrong side

Switching the eCmd in case of RTL

Change-Id: I62f791f31688dab19d736f5b786359c69694f728